fix mobile overflow

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -175,8 +175,8 @@ $page-title-font-sizes: (
   $breakpoint_XL: 50px,
 );
 $card-title-font-sizes: (
-  null: 20px,
-  $breakpoint_XS: 20px,
+  null: 18px,
+  $breakpoint_XS: 18px,
   $breakpoint_S: 22px,
   $breakpoint_M: 22px,
   $breakpoint_L: 24px,
