--- a/src/assets/scss/works.scss
+++ b/src/assets/scss/works.scss
@@ -51,6 +51,9 @@
           margin-left: 0;
           margin-bottom: 40px;
         }
+        @include size_S {
+          height: 54vw;
+        }
         .pic {
           max-height: 340px;
           height: 29vw;
@@ -65,12 +68,16 @@
           margin-top: -30px;
         }
         .card-intro {
+          height: 100%;
           padding: 14px;
           margin-top: -30px;
           border-top: 2px solid #eee;
           display: flex;
           justify-content: space-between;
           align-items: center;
+          @include size_S {
+            padding: auto 5px;
+          }
           .intro-title {
             display: flex;
             justify-content: flex-start;
@@ -90,6 +97,12 @@
           }
           .intro-icon {
             margin-right: 10px;
+            @include size_S {
+              margin-right: 0;
+            }
+            .el-button+.el-button {
+              margin-left: 5px;
+            }
             .change-color {
               color: $color_IntroIcon;
               border-color: $color_IntroIcon;
